fixed pictures on mobile.

--- a/subproject2/styles/styles.css
+++ b/subproject2/styles/styles.css
@@ -252,7 +252,7 @@ footer {
     }
 
     .gallery {
-        grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     }
 
     .birthday-wishes h2 {
